--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             position: absolute;
             width: 50px; /* Ajusta el tamaño según lo necesites */
             height: 50px; /* Ajusta el tamaño según lo necesites */
-            background: url('../bacteria.png') no-repeat center center; /* Ruta al archivo SVG en la carpeta padre */
+            background: url('./bacteria.png') no-repeat center center; /* Ruta al archivo SVG en la carpeta padre */
             background-size: contain; /* Ajusta el tamaño del SVG al contenedor */
             transform: translate(-50%, -50%);
             z-index: 2; /* Asegurarse de que las bolitas estén por encima del fondo */
@@ -79,7 +79,7 @@
             position: absolute;
             width: 30px; /* Tamaño de los puntos verdes */
             height: 30px; /* Tamaño de los puntos verdes */
-            background: url('../Argentum_v00.svg') no-repeat center center; /* Ruta al archivo SVG en la carpeta padre */
+            background: url('./Argentum_v00.svg') no-repeat center center; /* Ruta al archivo SVG en la carpeta padre */
             background-size: contain; /* Ajusta el tamaño del SVG al contenedor */
             transform: translate(-50%, -50%);
             z-index: 2; /* Asegurarse de que los puntos verdes estén por encima del fondo */
