--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bolitas y Puntos Verdes</title>
+    <title>Luchando contra la resistencia microbiana a antibióticos con nanopartículas de plata</title>
     <style>
         body {
             background-color: #00a99d; /* Color azulito para el fondo fuera del círculo */
